app/styles/app.css
html {
  height: 100%;
}

html, body {
  background-color: #000;
  font-family: monospace;
}

h3 {
  color: antiquewhite;
}

.section-title {
  color: #f0f;
}

.home-frontdoor {
  background-color: #f0f;
}

.home-signpost {
  background-color: #0ff;
}

.home-bulletin {
  background-color: #00f;
}

.greatroom-leaderboard {
  background-color: #f00;
}

.greatroom-fireplace {
  background-color: #ff0;
}

